Add auth proxy to dashboard

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -465,6 +465,8 @@ Outputs:
   ExchangeWebTargetGroupFullName:
     Value: !GetAtt ExchangeStack.Outputs.WebTargetGroupFullName
 
+  FeederAuthProxyApiId:
+    Value: !GetAtt FeederStack.Outputs.AuthApiId
   FeederWebTargetGroupFullName:
     Value: !GetAtt FeederStack.Outputs.WebTargetGroupFullName
 
