--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -50,6 +50,7 @@ Parameters:
 
   ExchangeWebTargetGroupFullName: { Type: String }
 
+  FeederAuthProxyApiId: { Type: String }
   FeederWebTargetGroupFullName: { Type: String }
 
   IdTargetGroupFullName: { Type: String }
@@ -133,6 +134,7 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${DovetailTargetGroupFullName}", "LoadBalancer", "${DovetailAlbFullName}", { "label": "Dovetail-Router" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${ExchangeWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Exchange" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${FeederWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Feeder" } ],
+                          [ "AWS/ApiGateway", "Count", "ApiId", "${FeederAuthProxyApiId}", { "label": "Feeder Auth Proxy" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IframelyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Iframely" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${MetricsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Metrics" } ],
