--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -943,6 +943,7 @@ Resources:
 
         ExchangeWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.ExchangeWebTargetGroupFullName
 
+        FeederAuthProxyApiId: !GetAtt Apps200AStack.Outputs.FeederAuthProxyApiId
         FeederWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.FeederWebTargetGroupFullName
 
         IdTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IdTargetGroupFullName
