--- a/stacks/jump-server.yml
+++ b/stacks/jump-server.yml
@@ -184,6 +184,7 @@ Resources:
       Domain: vpc
       InstanceId: !Ref JumpServer
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}-jump_server" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
